# ai-monitoring

./: CLAUDE.md  pyrightconfig.json
classifier/: .env.example  .gitignore  README.md  pyproject.toml
classifier/src/classifier/: aggregate.py  categories.py  chart.py  classify.py  config.py  db.py  emailer.py  images.py  ollama_client.py  report.py  timeframe.py  timeline.py
classifier/tests/: test_aggregate.py  test_categories.py  test_images.py  test_timeframe.py  test_timeline.py
server/: .env.example  .gitignore  README.md  pyproject.toml
server/src/server/: config.py  db.py  diagnostics.py  fetch.py  poll.py
server/tests/: test_diagnostics.py
windows-agent/: .gitignore  README.md  pyproject.toml  run-hidden.vbs  update-and-run.cmd  windows-agent-task.xml
windows-agent/src/windows_agent/: active_monitor.py  app.py  capture.py  capture_dxgi.py  config.py  main.py
windows-agent/tests/: test_capture.py
