[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Josiah Burden", email = "josiahburden19@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
poll-screenshots = "server.poll:run"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"